--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,10 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-pymongo = {extras = ["serv"], version = "^4.3.3"}
-docker = "^6.0.1"
 docker-compose = "^1.29.2"
+pymongo = "^4.3.3"
+odmantic = "^0.9.2"
+docker = "^6.0.1"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -18,7 +19,6 @@ taskipy = "^1.10.4"
 isort = "^5.12.0"
 black = "^23.3.0"
 pytest-cov = "^4.0.0"
-docker = "^6.0.1"
 
 [build-system]
 requires = ["poetry-core"]
