--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,9 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-docker-compose = "^1.29.2"
 pymongo = "^4.3.3"
-odmantic = "^0.9.2"
-docker = "^6.0.1"
+fastapi = {extras = ["all"], version = "^0.95.0"}
+python-dotenv = "^1.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
