feito main, modelo do banco, conexao com atlas

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,3 +31,4 @@ lint = "black --check --diff . && isort --check --diff ."
 pre_test = "task lint"
 test = "pytest -s -x --cov=mongoPyCrud -vv"
 post_test = "coverage html"
+run = "uvicorn mongopycrud.main:app --reload"
