--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.11"
 pymongo = "^4.3.3"
 fastapi = {extras = ["all"], version = "^0.95.0"}
 pydantic = "^1.10.7"
+python-dotenv = "^1.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
